# NeuroshimaNPCGenerator

./: AttributeRow.cpp  AttributeRow.h  AttributeSection.cpp  AttributeSection.h  MainWindow.cpp  MainWindow.h  NPCCard.cpp  NPCCard.h  NPCSkicnessDialog.cpp  NPCSkicnessDialog.h  NeuroshimaNPCGenerator.pro  PersonalSection.cpp  PersonalSection.h  Section.cpp  Section.h  SkillPackSection.cpp  SkillPackSection.h  SkillsSection.cpp  SkillsSection.h  Tricks.cpp  Tricks.h  build_with_meson.sh  data.qrc  main.cpp  meson.build
NPC/: NPCAttribute.cpp  NPCAttribute.h  NPCCard.cpp  NPCCard.h  NPCCardForm.cpp  NPCCardForm.h  NPCCardObverse.cpp  NPCCardObverse.h  NPCCardReverse.cpp  NPCCardReverse.h  NPCCardTab.cpp  NPCCardTab.h  NPCHero.cpp  NPCHero.h  NPCSkillPack.cpp  NPCSkillPack.h
NPC/Dialogs/: NPCAttributeManagerDialog.cpp  NPCAttributeManagerDialog.h  NPCCreatorDialog.cpp  NPCCreatorDialog.h  NPCOriginManagerDialog.cpp  NPCOriginManagerDialog.h  NPCSkicnessDialog.cpp  NPCSkicnessDialog.h  NPCTrickManagerDialog.cpp  NPCTrickManagerDialog.h
NPC/Utils/: CardConverter.cpp  CardConverter.h  DataLoader.cpp  DataLoader.h  Dice.cpp  Dice.h
NPC/Widgets/: DragDropAreaWidget.cpp  DragDropAreaWidget.h  NPCAbstractSkillPack.cpp  NPCAbstractSkillPack.h  NPCAbstractSkillpackView.cpp  NPCAbstractSkillpackView.h  NPCArmor.cpp  NPCArmor.h  NPCAttributeManagerWidget.cpp  NPCAttributeManagerWidget.h  NPCAttributeResultsRow.cpp  NPCAttributeResultsRow.h  NPCAttributeValueWidget.cpp  NPCAttributeValueWidget.h  NPCAttributeView.cpp  NPCAttributeView.h  NPCAttributeWidget.cpp  NPCAttributeWidget.h  NPCAttributesModsInfoWidget.cpp  NPCAttributesModsInfoWidget.h  NPCBioManagerWidget.cpp  NPCBioManagerWidget.h  NPCCustomSkillPack.cpp  NPCCustomSkillPack.h  NPCCustomWidget.h  NPCFeatureWidget.cpp  NPCFeatureWidget.h  NPCFriendCard.cpp  NPCFriendCard.h  NPCFriendCreator.cpp  NPCFriendCreator.h  NPCFriendEquipment.cpp  NPCFriendEquipment.h  NPCFriendManager.cpp  NPCFriendManager.h  NPCFriendObverse.cpp  NPCFriendObverse.h  NPCFriendStats.cpp  NPCFriendStats.h  NPCFriendView.cpp  (+55 more)
NPCEditor/: NPCCardEditor.cpp  NPCCardEditor.h
NPCEditor/Dialog/: AttributeDialog.cpp  AttributeDialog.h
NPCEditor/Section/: Attributes.cpp  Attributes.h  Personal.cpp  Personal.h  Section.h
NPCEditor/Widget/: AttributeTitleWidget.cpp  AttributeTitleWidget.h  AttributeValueWidget.cpp  AttributeValueWidget.h  AttributeWidget.cpp  AttributeWidget.h  CardWidget.cpp  CardWidget.h  PersonalWidget.cpp  PersonalWidget.h  SkillPacksWidget.cpp  SkillPacksWidget.h  TricksWidget.cpp  TricksWidget.h  WoundsWidget.cpp  WoundsWidget.h
Othres/: Concept.txt
Resources/: resources.qrc
Resources/json/: Attributes.json  Friend.json  Items.json  Origins.json  OtherSkills.json  Professions.json  Questions.json  Reputation.json  Sickness.json  Specializations.json  Tricks.json  WeaponSpecials.json
data/: NPCCard.json
json/: Attributes.json  DifficultyLevel.json  NPCCard.json  Origins.json  Professions.json  Sickness.json  Tricks.json  json.qrc
