project('NeuroshimaNPCGenerator', 
        'cpp',
        default_options: ['cpp_std=c++14'])

qt5 = import('qt5')

qt5_deps = dependency('qt5', modules: ['Core', 'Gui', 'Widgets'])

includes = include_directories('NPC', 'NPC/Dialogs', 'NPC/Utils', 'NPC/Widgets')

headers_moc = files('MainWindow.h',
                    'NPC/NPCCardReverse.h',
                    'NPC/Dialogs/NPCCreatorDialog.h',
                    'NPC/NPCCardTab.h',
                    'NPC/Utils/DataLoader.h',
                    'NPC/Utils/CardConverter.h',
                    'NPC/Utils/Dice.h',
                    'NPC/Widgets/NPCOtherSkills.h',
                    'NPC/Widgets/NPCOtherSkillsView.h',
                    'NPC/Widgets/NPCTrickWidgetItem.h',
                    'NPC/Widgets/NPCTricksWidget.h',
                    'NPC/Widgets/NPCReputationManagerWidget.h',
                    'NPC/Widgets/NPCSpecializationManagerWidget.h',
                    'NPC/Widgets/NPCSkillpackView.h',
                    'NPC/Widgets/NPCBioManagerWidget.h',
                    'NPC/Widgets/NPCShop.h',
                    'NPC/Widgets/DragDropAreaWidget.h',
                    'NPC/Widgets/NPCItem.h',
                    'NPC/Widgets/NPCAttributeWidget.h',
                    'NPC/Widgets/NPCProgressWidget.h',
                    'NPC/Widgets/SkillSpinBox.h',
                    'NPC/Widgets/NPCAttributeResultsRow.h',
                    'NPC/Widgets/NPCOriginManagerWidget.h',
                    'NPC/Widgets/NPCAttributeManagerWidget.h',
                    'NPC/Widgets/NPCAttributesModsInfoWidget.h',
                    'NPC/Widgets/NPCAbstractSkillPack.h',
                    'NPC/Widgets/NPCSkillChoose.h',
                    'NPC/Widgets/NPCWeaponItem.h',
                    'NPC/Widgets/NPCCustomWidget.h',
                    'NPC/Widgets/NPCAttributeView.h',
                    'NPC/Widgets/NPCTrickManagerWidget.h',
                    'NPC/Widgets/NPCShopItem.h',
                    'NPC/Widgets/NPCSkillsManagerWidget.h',
                    'NPC/Widgets/NPCAttributeValueWidget.h',
                    'NPC/Widgets/NPCProfessionManagerWidget.h',
                    'NPC/Widgets/NPCSicknessManagerWidget.h',
                    'NPC/Widgets/NPCReputationView.h',
                    'NPC/Widgets/NPCInventory.h',
                    'NPC/Widgets/ReputationValueBox.h',
                    'NPC/Widgets/NPCWeaponView.h',
                    'NPC/Widgets/NPCArmor.h',
                    'NPC/NPCCardObverse.h')

src = files('MainWindow.cpp',
            'main.cpp',
            'NPC/Dialogs/NPCCreatorDialog.cpp',
            'NPC/NPCCardObverse.cpp',
            'NPC/Utils/CardConverter.cpp',
            'NPC/Utils/DataLoader.cpp',
            'NPC/Utils/Dice.cpp',
            'NPC/Widgets/NPCShopItem.cpp',
            'NPC/Widgets/NPCArmor.cpp',
            'NPC/Widgets/NPCAttributesModsInfoWidget.cpp',
            'NPC/Widgets/SkillSpinBox.cpp',
            'NPC/Widgets/NPCAttributeWidget.cpp',
            'NPC/Widgets/NPCOtherSkillsView.cpp',
            'NPC/Widgets/NPCOtherSkills.cpp',
            'NPC/Widgets/NPCProfessionManagerWidget.cpp',
            'NPC/Widgets/ReputationValueBox.cpp',
            'NPC/Widgets/NPCSkillChoose.cpp',
            'NPC/Widgets/NPCAttributeView.cpp',
            'NPC/Widgets/NPCAttributeManagerWidget.cpp',
            'NPC/Widgets/NPCSkillPack.cpp',
            'NPC/Widgets/NPCShop.cpp',
            'NPC/Widgets/DragDropAreaWidget.cpp',
            'NPC/Widgets/NPCProgressWidget.cpp',
            'NPC/Widgets/NPCOriginManagerWidget.cpp',
            'NPC/Widgets/NPCItem.cpp',
            'NPC/Widgets/NPCTrickManagerWidget.cpp',
            'NPC/Widgets/NPCAttributeResultsRow.cpp',
            'NPC/Widgets/NPCSkillsManagerWidget.cpp',
            'NPC/Widgets/NPCWeaponItem.cpp',
            'NPC/Widgets/NPCSkillpackView.cpp',
            'NPC/Widgets/NPCInventory.cpp',
            'NPC/Widgets/NPCTricksWidget.cpp',
            'NPC/Widgets/NPCSpecializationManagerWidget.cpp',
            'NPC/Widgets/NPCCustomSkillPack.cpp',
            'NPC/Widgets/NPCTrickWidgetItem.cpp',
            'NPC/Widgets/NPCAbstractSkillPack.cpp',
            'NPC/Widgets/NPCBioManagerWidget.cpp',
            'NPC/Widgets/NPCReputationView.cpp',
            'NPC/Widgets/NPCReputationManagerWidget.cpp',
            'NPC/Widgets/NPCSicknessManagerWidget.cpp',
            'NPC/Widgets/NPCAttributeValueWidget.cpp',
            'NPC/Widgets/NPCWeaponView.cpp',
            'NPC/NPCCardReverse.cpp',
            'NPC/NPCCardTab.cpp')

qtprocessed = qt5.preprocess(moc_headers: headers_moc,
                             include_directories: includes,
                             qresources: ['Resources/resources.qrc'])

exe = executable('NeuroshimaNPCGenerator',
                 qtprocessed,
                 sources: src,
                 include_directories: includes,
                 dependencies: qt5_deps) 

